Format header, Add content to first section

--- a/index.html
+++ b/index.html
@@ -8,14 +8,31 @@
 </head>
 <body>
     <div class="main-container">
-        <div class="header">
-            <span> Header Logo </span>
-            <span> header link one </span>
-            <span> header link two </span>
-            <span> header link three </span>
-        </div>
         <div class="one">
-            <h1>This website is awesome</h1>
+            <div class="one-content">
+                <div class="header">
+                    <div class="logo">
+                        <span> Header Logo </span>
+                    </div>
+                    <div class="links">
+                        <span> header link one </span>
+                        <span> header link two </span>
+                        <span> header link three </span>
+                    </div>
+                </div>
+                <div class="non-header">
+                    <div class="split-screen">
+                        <div class="left">
+                            <h1>This website is awesome</h1>
+                            <p>This website has some subtext that goes here under the main title. It's a smaller font and the color is lower contrast.</p>
+                            <button>Sign Up</button>
+                        </div>
+                        <div class="right">
+                            <img src="images/candy.jpg" alt="image of candy">
+                        </div>
+                    </div>
+                </div>
+            </div>
         </div>
     </div>
 </body>
