--- a/index.html
+++ b/index.html
@@ -32,6 +32,29 @@
                 </div>
             </div>
         </div>
+        <div class="two">
+            <h2>Some random information</h2>
+            <div class="cubes">
+                <div class="cube-one">
+                    <img>
+                    <p>this is some subtext under an illustration or image</p>
+                </div>
+                <div class="cube-two">
+                    <img>
+                    <p>this is some subtext under an illustration or image</p>
+                </div>
+                <div class="cube-three">
+                    <img>
+                    <p>this is some subtext under an illustration or image</p>
+                </div>
+                <div class="cube-four">
+                    <img>
+                    <p>this is some subtext under an illustration or image</p>
+                </div>
+            </div>
+        </div>
+
+
     </div>
 </body>
 </html>
