--- a/index.html
+++ b/index.html
@@ -8,6 +8,7 @@
 </head>
 <body>
     <div class="main-container">
+
         <div class="one">
             <div class="one-content">
                 <div class="header">
@@ -32,6 +33,7 @@
                 </div>
             </div>
         </div>
+
         <div class="two">
             <h2>Some random information</h2>
             <div class="cubes">
@@ -53,9 +55,12 @@
                 </div>
             </div>
         </div>
+
         <div class="three">
-            <p>This is an inspiring quote, or a testimonial from a customer. Maybe it's just filling up space, or maybe people will actually read it. Who knows? All I know is that it looks nice.</p>
-            <span>-Thor, God of Thunder</span>
+            <div class="three-content">
+                <p>This is an inspiring quote, or a testimonial from a customer. Maybe it's just filling up space, or maybe people will actually read it. Who knows? All I know is that it looks nice.</p>
+                <span>-Thor, God of Thunder</span>
+            </div>
         </div>
 
     </div>
