--- a/index.html
+++ b/index.html
@@ -63,6 +63,15 @@
             </div>
         </div>
 
+        <div class="four">
+            <div class="blue-rec">
+                <div class="text">
+                    <h3>Call to action! It's time!</h3>
+                    <span>Sign up for our product by clicking that button right over there!</span>
+                </div>
+                <button>Sign Up</button>
+            </div>
+        </div>
     </div>
 </body>
 </html>
