--- a/index.html
+++ b/index.html
@@ -72,6 +72,11 @@
                 <button>Sign Up</button>
             </div>
         </div>
+
+        <div class="footer">
+            <span>Copyright &#169 The Odin Project 2021 </span>
+        </div>
+
     </div>
 </body>
 </html>
